# zkevm-chain

./: .develatus-apparatus.mjs  .dockerignore  .gitignore  Cargo.toml  README.md  README.original.md  docker-compose-perf.yml  docker-compose-pub.yml  docker-compose.yml  rust-toolchain
.cargo/: config.toml
.github/workflows/: autogen.yml  circuit-test.yml  coverage.yml  devops.yml  docker.sh  docker.yml  example.yml  github-ops.yml  heavy_pi_eth_transfer.yml  heavy_pi_native_withdraw.yml  heavy_super_eth_transfer.yml  heavy_super_native_withdraw.yml  heavy_test.yml  lint.yml  pi-eth-transfer.yml  pi-native-withdraw.yml  super-eth-transfer.yml  super-native-withdraw.yml  super-worst-case-keccak-0-32.yml  super-worst-case-mload.yml  super-worst-case-smod.yml  test.yml  tmp.yml  wakeup_runner.sh
common/: Cargo.toml
common/src/: json_rpc.rs  lib.rs  prover.rs
contracts/: L1Bridge.sol  L1BridgeEvents.sol  L1Environment.sol  L1Messenger.sol  L1ZkEvmBridge.sol  L2Bridge.sol  L2BridgeEvents.sol  Multicall.sol  PatriciaValidator.sol  Proxy.sol  Utils.sol  ZkEvmBridgeEvents.sol  ZkEvmL1Bridge.sol  ZkEvmL2MessageDeliverer.sol  ZkEvmL2MessageDispatcher.sol  ZkEvmMagicNumbers.sol  ZkEvmMessageDelivererBase.sol  ZkEvmMessageDispatcher.sol  ZkEvmMessageDispatcherBase.sol  ZkEvmStorage.sol  ZkEvmUtils.sol
contracts/interfaces/: IZkEvmMessageDelivererBase.sol  IZkEvmMessageDelivererWithProof.sol  IZkEvmMessageDelivererWithoutProof.sol  IZkEvmMessageDispatcher.sol
contracts/optimism/: L1OptimismBridge.sol  L2OptimismBridge.sol  OptimismWrapper.sol
contracts/templates/: CommonBlockOperations.sol  HeaderUtil.sol  InstanceVerifier.sol  PatriciaAccountValidator.sol  PatriciaStorageValidator.sol  PatriciaValidator.sol  PublicInput.sol  mpt.yul  rlp.yul  utils.yul
contracts/tests/: TestPatricia.sol  ZkEvmTest.sol
contracts/verifier/: InstanceVerifier.sol  PolynomialEval.sol
coordinator/: .gitignore  Cargo.toml
coordinator/src/: config.rs  debug.rs  faucet.rs  lib.rs  macros.rs  shared_state.rs  structs.rs  utils.rs
coordinator/tests/: chain.rs  deploy.rs  drop_message.rs  hop.rs  misc.rs  native_deposit.rs  native_withdraw.rs  patricia.rs  verifier.rs  worst_case.rs
coordinator/tests/commitment/: mod.rs
coordinator/tests/common/: mod.rs
coordinator/tests/patricia/: test-data-0000000000000000000000000000000000030000.json  test-data-68b3465833fb72a70ecdf485e0e4c7bd8665fc45.json  test-data-a5409ec958c83c3f309868babaca7c86dcb077c1.json
coordinator/tests/verifier/: 0-0.json.xz  1-5.json.xz  2-1.json.xz  3-3072.json.xz  4-1024.json.xz
dev/: Cargo.toml
dev/src/: bytecode.rs  genesis.rs  lib.rs
dev/tests/: autogen.rs
docker/coordinator/: Dockerfile
docker/dev/: Dockerfile
docker/geth/: Dockerfile  init.sh
docker/geth/templates/: l1-testnet.json  l2-testnet.json
docker/prover/: Dockerfile
docker/web/: Dockerfile  nginx.conf
docs/: README.md
errors/: PROVER_LOG.txt.xz
errors/1/: block.json  block_hashes.json  prestate.json
prover/: Cargo.toml  build.rs
prover/src/: aggregation_circuit.rs  circuit_autogen.rs  circuit_witness.rs  circuits.rs  compute_proof.rs  dummy_circuit.rs  lib.rs  public_input_circuit.rs  server.rs  shared_state.rs  structs.rs  super_circuit.rs  utils.rs  version.rs
prover/tests/: autogen.rs  proverd.rs  verifier.rs
scripts/: autogen.sh  ci_autogen_commit.sh  ci_commit_errors.sh  ci_grafana.sh  compile_contracts.sh  dev.sh  get_block_fixtures.sh  get_coverage.sh  heavy_ci.sh  lint.sh  load_coverage.sh  patch_genesis.mjs  purge_chain.sh  rpc_prover.sh  test_coverage.sh  test_prover.sh
testnet/: .env.example  .gitignore  README.md  docker-compose.yml  genesis-template.json  genesis.json  geth.toml  init.sh  l1-genesis-template.json  l2-genesis-template.json
