[package]
name = "zkevm_common"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
eth-types = { git = "https://github.com/pinkiebell/zkevm-circuits.git", rev = "4e1832bf8f0fabfd3eab79fe59728d43628d79c1" }
hyper = { version = "0.14.16", features = ["server"] }
log = "0.4.14"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
tokio = { version = "1.16.1", features = ["macros", "rt-multi-thread"] }
