[package]
name = "coordinator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.15", features = ["derive", "env"] }
env_logger = "0.9.0"
ethers-core = "0.17.0"
ethers-signers = "0.17.0"
hyper = { version = "0.14.16", features = ["client", "server", "http1", "http2", "runtime"] }
log = "0.4.14"
rand = "0.8.4"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
serde_with = "2.0.1"
tokio = { version = "1.16.1", features = ["macros", "rt-multi-thread", "time"] }
zkevm_common = { path = "../common" }

[dev-dependencies]
tokio = { version = "1.16.1", features = ["macros", "rt-multi-thread", "time", "parking_lot"] }
rust-lzma = "0.5.1"
