[package]
name = "prover"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2022_09_10" }
bus-mapping = { git = "https://github.com/privacy-scaling-explorations/zkevm-circuits.git", rev = "77c5b62ee6c29ec4a2ae811a18fc81a6a64a0c2e" }
eth-types = { git = "https://github.com/privacy-scaling-explorations/zkevm-circuits.git", rev = "77c5b62ee6c29ec4a2ae811a18fc81a6a64a0c2e" }
zkevm-circuits = { git = "https://github.com/privacy-scaling-explorations/zkevm-circuits.git", rev = "77c5b62ee6c29ec4a2ae811a18fc81a6a64a0c2e" }
env_logger = "0.9.0"
ethers-providers = "0.17.0"
hyper = { version = "0.14.16", features = ["server"] }
rand_xorshift = "0.3"
log = "0.4.14"
rand = "0.8.4"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
strum = "0.24"
tokio = { version = "1.16.1", features = ["macros", "rt-multi-thread"] }
zkevm_common = { path = "../common" }
plonk-verifier = { git = "https://github.com/pinkiebell/plonk-verifier.git", rev = "06a09363c2b99950e439567eac0ddd1f61f86cb7" }
itertools = "0.10.3"

# autogen
mock = { git = "https://github.com/privacy-scaling-explorations/zkevm-circuits.git", rev = "77c5b62ee6c29ec4a2ae811a18fc81a6a64a0c2e", optional = true }
ethers-signers = { version = "0.17.0", optional = true }
clap = { version = "3.2.22", features = ["derive", "env"] }

[features]
default = []
autogen = ["dep:mock", "dep:ethers-signers"]
