[package]
name = "prover"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_01_20" }
bus-mapping = { git = "https://github.com/privacy-scaling-explorations/zkevm-circuits.git", branch = "main" }
eth-types = { git = "https://github.com/privacy-scaling-explorations/zkevm-circuits.git", branch = "main", features = ["warn-unimplemented"] }
zkevm-circuits = { git = "https://github.com/privacy-scaling-explorations/zkevm-circuits.git", branch = "main", features = ["test-circuits"] }
snark-verifier = { git = "https://github.com/privacy-scaling-explorations/snark-verifier.git", tag = "v2023_02_02", default-features = false, features = ["loader_evm", "parallel"] }
env_logger = "0.9.0"
ethers-providers = "0.17.0"
hyper = { version = "0.14.16", features = ["server"] }
rand_xorshift = "0.3"
log = "0.4.14"
rand = "0.8.4"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
strum = "0.24"
tokio = { version = "1.16.1", features = ["macros", "rt-multi-thread"] }
zkevm_common = { path = "../common" }
itertools = "0.10.3"
clap = { version = "4.0.14", features = ["derive", "env"] }

# autogen
mock = { git = "https://github.com/privacy-scaling-explorations/zkevm-circuits.git", branch = "main", optional = true }
ethers-signers = { version = "0.17.0", optional = true }
zkevm_dev = { path = "../dev", optional = true }
paste = { version = "1.0.11", optional = true }

[features]
default = []
autogen = ["mock", "ethers-signers", "zkevm_dev", "paste"]
